--- a/examples/basic/basic.html
+++ b/examples/basic/basic.html
@@ -1,12 +1,12 @@
 <html>
 
 <head>
-  <!-- Normally to be loaded through NPM -->
-  <script type="text/javascript" src="basic-compiled.js"></script>
+  <link rel="stylesheet" type="text/css" href="node_modules/bbop-widget-solr-autocomplete/node_modules/selectize/dist/css/selectize.css">
 </head>
 
 <body>
-  <select id="select_disease" placeholder="Pick a Disease..." style="width:60px;"></select>
+  <select id="select_disease" placeholder="Pick a Disease..."></select>
+  <script type="text/javascript" src="basic-compiled.js"></script>
 </body>
 
 </html>
